--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   http: ^0.13.5
   permission_handler: ^11.0.1
   file_picker: ^5.3.1
+  device_info_plus: ^9.1.1
+  flutter_downloader: ^1.10.5
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
