No web view iteration

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,15 +19,15 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths"/>
         </provider>
-        <provider
-            android:name="vn.hunghd.flutterdownloader.FlutterDownloaderInitializer"
-            android:authorities="${applicationId}.flutter-downloader-init"
-            android:exported="false">
-            <!-- changes this number to configure the maximum number of concurrent tasks -->
-            <meta-data
-                android:name="vn.hunghd.flutterdownloader.MAX_CONCURRENT_TASKS"
-                android:value="5" />
-        </provider>
+<!--        <provider-->
+<!--            android:name="vn.hunghd.flutterdownloader.FlutterDownloaderInitializer"-->
+<!--            android:authorities="${applicationId}.flutter-downloader-init"-->
+<!--            android:exported="false">-->
+<!--            &lt;!&ndash; changes this number to configure the maximum number of concurrent tasks &ndash;&gt;-->
+<!--            <meta-data-->
+<!--                android:name="vn.hunghd.flutterdownloader.MAX_CONCURRENT_TASKS"-->
+<!--                android:value="5" />-->
+<!--        </provider>-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
