--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   device_info_plus: ^9.1.1
   flutter_downloader: ^1.10.5
   path_provider: ^2.1.0
+  loading_indicator: ^3.1.1
+  fluttertoast: ^8.2.4
+  video_player: ^2.7.0
 
 dev_dependencies:
   flutter_test:
