--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   loading_indicator: ^3.1.1
   fluttertoast: ^8.2.4
   video_player: ^2.7.0
+  gallery_saver: ^2.3.2
 
 dev_dependencies:
   flutter_test:
