--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,8 @@ dependencies:
   path_provider: ^2.1.0
   loading_indicator: ^3.1.1
   fluttertoast: ^8.2.4
-  video_player: ^2.7.0
   gallery_saver: ^2.3.2
+  chewie: ^1.7.4
 
 dev_dependencies:
   flutter_test:
